--- a/planos.html
+++ b/planos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Caravan - Paris</title>
+    <title>Caravan - Planos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -70,13 +70,13 @@
 
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item " href="california.html">California</a>
-                        <a class="dropdown-item active" href="paris.html">Paris</a>
+                        <a class="dropdown-item " href="paris.html">Paris</a>
                         <a class="dropdown-item " href="dublin.html">Dublin</a>
                     </div>
                 </li>
 
                 <li class="nav-item ">
-                    <a class="nav-link" href="planos.html">Planos</a>
+                    <a class="nav-link active" href="planos.html">Planos</a>
                 </li>
 
                 <li class="nav-item ">
